styles/taskstyle.css
/* ... */
.geneneratedSubtasks {
  max-height: 139px;
  overflow-y: auto;
  scrollbar-width: none;
}

.category-dropdown-items {
  height: 51px;
  display: flex;
  align-items: center;
  justify-content: space-between;
}

.hiddenInput {
  padding: 22px 18px;
  height: 51px;
  border: none;
}

.hidden-input-container {
  margin-top: -65px;
  border: none;
  outline: none;
  display: flex;
  align-items: center;
  justify-content: space-between;
  border-radius: 10px;
}

.hidden-input-container:focus {
  outline: none;
}

.hidden-input input {
  outline: none;
}

.hidden-input input:focus {
  outline: none;
}

.remove-border {
  border-bottom-left-radius: 0px !important;
  border-bottom-right-radius: 0px !important;
  border-bottom: none !important;
}

li {
  cursor: pointer;
}

#renderCategorys {
  max-height: 150px;
  overflow-y: scroll;
}

::-webkit-scrollbar {
  width: 0px;
}

#renderContacts {
  max-height: 150px;
  overflow-y: scroll;
  overflow-x: hidden;
}

.category-dropdown-items:hover {
  background-color: lightgray;
}

.contacts {
  margin-top: -15px;
  border-bottom-right-radius: 10px;
  border-bottom-left-radius: 10px;
  border: 1px solid #d1d1d1;
  background: #fff;
  border-top: none;
  width: 422px;
  border-top-left-radius: 0px;
  border-top-right-radius: 0px;
}

.color-container button {
  border-radius: 50% !important;
  height: 16px !important;
  width: 16px !important;
}

.color-container input {
  background-color: #00000068 !important;
  border-radius: 50% !important;
  height: 10px !important;
  width: 10px !important;
}

.color-container {
  display: flex;
  align-items: center;
}

.you-own-color {
  display: flex;
  align-items: center;
  margin-top: 5px;
  margin-left: 5px;
}

.btn-seperator {
  margin-left: 8px;
  margin-right: 8px;
}

.cancel-btn {
  margin: 0;
  padding: 0;
}

.check-btn {
  margin: 0;
  padding: 0;
}

.check-btn img {
  object-fit: contain;
  height: 21px;
}

#hidden-error p {
  color: red;
  padding-left: 15px;
}

@media (max-width: 428px) {
  .add-task-section h1 {
    margin-left: 33px;
    margin-top: 41px;
    font-size: 47px;
  }

  .add-task-section form {
    margin-left: 31px;
  }

  .seperator {
    display: none;
  }

  .top-section,
  .bottom-section {
    flex-direction: column;
    gap: 9px;
  }

  .bottom-right {
    margin-top: 0px;
  }

  .prio-label {
    order: -1;
  }

  .prio-btn {
    order: -1;
  }

  #task-date {
    margin-bottom: 9px;
  }

  label {
    font-size: 16px;
  }

  .categorys,
  #render-categorys,
  #title-input,
  #description-input,
  #category-container,
  #assigned-container,
  #task-date,
  .subtasks-container,
  .contacts,
  .contact-item,
  .prio-btn {
    width: 363px;
    font-size: 16px;
  }

  #category-input,
  #generatedInput,
  #generatedSubtaskInput {
    width: 232px;
  }

  #description-input {
    height: 93px;
  }

  .category-li-item,
  .contact-item {
    font-size: 16px;
  }

  #urgentBtn,
  #mediumBtn,
  #lowBtn {
    height: 47px;
    width: 111px;
    padding: 18px 10px;
    font-size: 16px;
  }

  .contact-item {
    margin-right: 8px;
  }

  #contact-img {
    margin-right: 9px;
  }

  .checkboxImg {
    margin-right: 6px;
  }

  .clear-btn {
    display: none;
  }

  #renderCategorys {
    max-height: 120px;
  }

  .create-btn-web {
    display: none;
  }

  .create-btn-responsive {
    position: absolute;
    top: 11px;
    right: 25px;
    height: 57px;
    width: 118px;
  }

  #subtask-content {
    padding-bottom: 40px;
  }

  .add-to-board-btn {
    bottom: 25% !important;
    left: 50% !important;
  }
}

@media (max-width: 400px) {
  .add-task-section form {
    margin-left: 0;
    align-items: center;
  }
}

@media (max-width: 330px) {

  .categorys,
  #render-categorys,
  #title-input,
  #description-input,
  #category-container,
  #assigned-container,
  #task-date,
  .subtasks-container,
  #contact-container,
  .contacts,
  .contact-item,
  .prio-btn {
    width: 300px;
  }

  #renderCategoryss {
    max-height: 80px;
  }

  #urgentBtn,
  #mediumBtn,
  #lowBtn {
    height: 42px;
    width: 93.3px;
  }

  .add-task-section h1 {
    margin-left: 10px;
  }
}

#generatedInput,
#generatedSubtaskInput {
  width: 190px;
}

#category-input {
  width: 165px;
}

#description-input {
  height: 85px;
}

.add-to-board-btn {
  display: flex;
  position: absolute;
  bottom: 10%;
  left: calc(116px + 50%);
  transform: translateX(-50%);
  width: 326px;
  height: 74px;
  align-items: center;
  justify-content: space-around;
  border-radius: 20px;
  background: #2a3647;
  box-shadow: 0px 0px 4px rgba(0, 0, 0, 0.15);
  color: white;
}

@media (max-width: 370px) {

  .categorys,
  #render-categorys,
  #title-input,
  #description-input,
  #category-container,
  #assigned-container,
  #task-date,
  .subtasks-container,
  .contact-item,
  .prio-btn {
    width: 320px;
  }

  #urgentBtn,
  #mediumBtn,
  #lowBtn {
    height: 45px;
    width: 100px;
  }

  .add-task-section h1 {
    margin-left: 20px;
  }

  .add-to-board-btn {
    width: 250px;
  }
}

@media(max-width: 340px) {

  .categorys,
  #render-categorys,
  #title-input,
  #description-input,
  #category-container,
  #assigned-container,
  #task-date,
  .subtasks-container,
  .contact-item,
  .contacts,
  #contact-container,
  .prio-btn {
    width: 280px;
  }

  #urgentBtn,
  #mediumBtn,
  #lowBtn {
    height: 40px;
    width: 90px;
    padding: 18px 21px;
    align-items: center;
    font-size: 14px;
  }
}
/* ... */

